Projenin revize edilmiş yeni hali eklendi: